--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .DS_Store
 node_modules
 package-lock.json
+
+# Vite build output
+renderer-vite/dist/
+
+# Node modules
+renderer-vite/node_modules/
