--- a/renderer-vite/package.json
+++ b/renderer-vite/package.json
@@ -7,6 +7,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
+        "vite-plugin-vuetify": "^2.1.1",
         "vue": "^3.5.13",
         "vuetify": "^3.8.2"
     },
