feat: mac向けElectronアプリの安定動作と配布準備を整備
- shell-envを使用してGUI起動時のPATH補完処理を追加（index.js）
- App.vueに初回Docker取得リトライ処理を追加（mac特有の遅延対策）
- electron-builder設定（mac/win/linux）をpackage.jsonに記述
- .gitignoreにdist出力の除外を追加

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ renderer-vite/dist/
 
 # Node modules
 renderer-vite/node_modules/
+
+# Electron distribution artifacts (e.g. .dmg, .exe, AppImage, etc.)
+dist/
