`.dmg` を開こうとすると「壊れているため開け ません」と表示される場合の対処法をREADME.mdに追加

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     },
     "mac": {
       "icon": "build/myicon.icns",
-      "target": "dmg"
+      "target": ["zip","dmg"]
     },
     "win": {
       "target": "nsis"
